--- a/CXYO/app/src/main/AndroidManifest.xml
+++ b/CXYO/app/src/main/AndroidManifest.xml
@@ -17,7 +17,8 @@
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar" />
+            android:theme="@style/AppTheme.NoActionBar"
+            android:windowSoftInputMode="adjustNothing"/>
         <activity
             android:name=".LoginActivity"
             android:label="@string/app_name"
