--- a/CXYO/build.gradle
+++ b/CXYO/build.gradle
@@ -15,6 +15,10 @@ buildscript {
 allprojects {
     repositories {
         jcenter()
+
+        flatDir {
+            dirs '../inflight-android-sdk'
+        }
     }
 }
 
